apps/services/ollama/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    name: ollama
    app.kubernetes.io/name: ollama
    app.kubernetes.io/part-of: services
